        # In Javascript :
             - 'creme.ajax.jqueryAjaxSend' now support the option `{redirect: 'follow'}` : Enables page redirection
               to the XMLHttpRequest 'responseURL' (if different from the current url).
             - Add 'creme.menu.MenuActionBuilders' action registry for menu; Use 'setup-menu-actions' to register
               custom actions.
        # App :
            * Persons :
                - The model 'Address' got new fields: 'created', 'modified'.
            * Activities :
                - The model 'Calendar' got new fields: 'uuid', 'created', 'modified'.
                - The JavaScript component 'creme.ActivityCalendar' has been improved :
                    - The property 'rendererDelay' (number) has been added; Improve performances by limiting the calls
                      to the rendering methods. (see https://fullcalendar.io/docs/rerenderDelay)
            * Assistants :
                - Some fields 'creation_date' & 'modification_date' have been added in models.
            * Assistants :
                - The model 'EmailSending' got new fields: 'created', 'modified'.

    Breaking changes :
    ------------------
        # Deprecated stuffs which have been removed :
            - The settings 'ENUMERABLE_REGISTRATION_ERROR' has been removed.
            - In 'creme_core.constants', 'DEFAULT_CURRENCY_PK' & 'DISPLAY_CURRENCY_LOCAL_SYMBOL' have been removed.
            - In 'creme_core.core' :
                - The method 'entity_cell.EntityCellCustomField.build()' does not accept integer "value" anymore.
                - These aliases have been removed :
                  'EntityCellsRegistry', '_EntityFilterRegistry', '_EntityFilterSuperRegistry',
                  '_EnumerableRegistry', '_FunctionFieldRegistry', '_ImprintManager',
                  '_SandboxTypeRegistry', '_SettingKeyRegistry', 'ReplacersRegistry'
            - In 'creme_core.gui', these aliases have been removed :